added wheel scrolling, arrow clicks next

--- a/index.html
+++ b/index.html
@@ -8,5 +8,27 @@
 </head>
 <body>
 
+    <div class="gallery-wrap">
+        <img src="./assets/images/back.png" alt="" id="back-btn">
+
+        <div class="gallery">
+            <div>
+                <span><img src="./assets/images/image-1.png" alt=""></span>
+                <span><img src="./assets/images/image-2.png" alt=""></span>
+                <span><img src="./assets/images/image-3.png" alt=""></span>
+            </div>
+            <div>
+                <span><img src="./assets/images/image-4.png" alt=""></span>
+                <span><img src="./assets/images/image-5.png" alt=""></span>
+                <span><img src="./assets/images/image-6.png" alt=""></span>
+            </div>
+        </div>
+
+        <img src="./assets/images/next.png" alt="" id="next-btn">
+    </div>
+
+
+
+    <script src="./script.js"></script>
 </body>
 </html>
